[package]
name = "skiplist-rs"
version = "0.1.3"
authors = ["bangbaoshi"]
edition = "2018"
keywords = ["collection", "skiplist", "sorted"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

documentation = "https://github.com/bangbaoshi/skiplist-rs"
homepage = "https://github.com/bangbaoshi/skiplist-rs"
repository = "https://github.com/bangbaoshi/skiplist-rs"

license = "MIT"
description = "Skip list is a kind of ordered map and can store any value inside. See skip list wikipedia page to learn more about this data structure."
readme = "README.md"


[dependencies]
rand = "0.7.3"